update .env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-DB_HOST='localhost'
-DB_USER='admin'
-DB_PASS='password'
-DB_PORT='3210'
-DB_NAME='launcher'
-SERVER_PORT='4321'
-FARSTORE_CONTRACT='0x...'
+FARSTORE_API_URL=''
+FARSTORE_API_KEY=''
+DB_HOST=''
+DB_USER=''
+DB_PASS=''
+DB_PORT=''
+DB_NAME=''
+SERVER_PORT=''
+FARSTORE_CONTRACT=''
+FARSTORE_BATCH_READ_CONTRACT=''
 BASE_JSON_RPC_URL=''
